Corrected issue where stock materials could not be set correctly for custom bows.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -460,7 +460,7 @@
                                     </td>
                                     <td>
                                         <select name="system.bowDesign.stockMaterialOne.name">
-                                            {{selectOptions item.system.bowDesign.materials selected=system.bowDesign.stockMaterialOne.name valueAttr="name" labelAttr="name"}}
+                                            {{selectOptions item.system.bowDesign.materials selected=item.system.bowDesign.stockMaterialOne.name valueAttr="name" labelAttr="name"}}
                                         </select>
                                     </td>
                                     <td class="question-container" id="riser-material">
@@ -490,7 +490,7 @@
                                     </td>
                                     <td>
                                         <select name="system.bowDesign.stockMaterialTwo.name">
-                                            {{selectOptions item.system.bowDesign.materials selected=system.bowDesign.stockMaterialTwo.name valueAttr="name" labelAttr="name"}}
+                                            {{selectOptions item.system.bowDesign.materials selected=item.system.bowDesign.stockMaterialTwo.name valueAttr="name" labelAttr="name"}}
                                         </select>
                                     </td>
                                     <td class="question-container" id="riser-material">
