Updated logic for fetching explosive fillers. It defaults to finding it by the code, but will fallback to the name for backwards compatibility.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1902,7 +1902,7 @@
                                 </td>
                                 <td>
                                     <select name="system.firearmDesign.ammunition.{{id}}.explosiveFiller">
-                                        {{selectOptions ../explosiveFillers selected=ammo.explosiveFiller valueAttr="name" labelAttr="label"}}
+                                        {{selectOptions ../explosiveFillers selected=ammo.explosiveFiller valueAttr="code" labelAttr="label"}}
                                     </select>
                                 </td>
                                 <td class="question-container" id="explosive-filler">
