--- a/templates/item/Consolidated-Item-sheet.html
+++ b/templates/item/Consolidated-Item-sheet.html
@@ -4,9 +4,14 @@
     <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
         <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+            <h1 class="charname">
+                <input name="name" type="text" value="{{item.name}}" placeholder="Name"/>
+            </h1>
         </div>
+        Consolidated Sheet
     </header>
+
+    {{#if (eq item.type "Trait")}}
     <div>
         <table>
             <tr>
@@ -93,6 +98,176 @@
             </tr>
         </table>
     </div>
+    {{else if (eq item.type "Rollable")}}
+    <div class="header-fields">
+        <table>
+            <tr>
+                <td>
+                    <label class="resource-label">Category</label>
+                </td>
+                <td>
+                    <select name="system.category">
+                        {{selectOptions rollableTypeOptions selected=item.system.category}}
+                    </select>
+                </td>
+            </tr>
+            {{#if (eq item.system.category "skill") }}
+            <tr>
+                <td>
+                    <label class="resource-label">Skill Difficulty</label>
+                </td>
+                <td>
+                    <select name="system.difficulty">
+                        {{selectOptions rollableDifficultyOptions selected=item.system.difficulty}}
+                    </select>
+                </td>
+            </tr>
+            {{else}}
+            <tr>
+                <td>
+                    <label class="resource-label">Technique Difficulty</label>
+                </td>
+                <td>
+                    <select name="system.difficulty">
+                        {{selectOptions techniqueDifficultyOptions selected=item.system.difficulty}}
+                    </select>
+                </td>
+            </tr>
+            {{/if}}
+
+            {{#if (eq item.system.category "skill") }}
+            <tr>
+                <td>
+                    <label class="resource-label">Base Attribute</label>
+                </td>
+                <td>
+                    <select name="system.baseAttr">
+                        {{selectOptions baseAttrOptions selected=item.system.baseAttr}}
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Do you have Weapon Master covering this skill?</label>
+                </td>
+                <td style="display: flex">
+                    <input type="checkbox" name="system.weaponMaster" {{checked item.system.weaponMaster}} data-dtype="Boolean"/>
+                </td>
+            </tr>
+            {{else}}
+            <tr>
+                <td>
+                    <label class="resource-label">Is this technique half price?</label>
+                </td>
+                <td style="display: flex">
+                    <input type="checkbox" name="system.halfPriceTechnique" {{checked item.system.halfPriceTechnique}} data-dtype="Boolean"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Is this technique based on an active defence</label>
+                </td>
+                <td>
+                    <select name="system.defenceTechnique">
+                        {{selectOptions defenceTypeOptions selected=item.system.defenceTechnique}}
+                    </select>
+                </td>
+            </tr>
+            {{#if (or (eq item.system.defenceTechnique "block") (eq item.system.defenceTechnique "parry"))}}
+            <tr>
+                <td>
+                    {{#if (eq item.system.defenceTechnique "parry")}}
+                    <label class="resource-label">The Parry's underlying modifier, like the +2 for a staff</label>
+                    {{else}}
+                    <label class="resource-label">The Block's underlying modifier, like the +3 for a large shield</label>
+                    {{/if}}
+                </td>
+                <td>
+                    <input type="text" name="system.defenceTechniqueMod" value="{{item.system.defenceTechniqueMod}}" data-dtype="Number"/>
+                </td>
+            </tr>
+            {{/if}}
+            <tr>
+                <td>
+                    <label id="baseSkillLabel" class="resource-label">Base Skill</label>
+                </td>
+                {{#unless (eq item.system.defenceTechnique "dodge")}}
+                <td style="display: flex">
+                    <input id="baseSkillText" type="text" name="system.baseSkill" value="{{item.system.baseSkill}}" data-dtype="String" style="flex:3;"/>
+                    <label id="baseSkillLevel" style="flex: 1; text-align: center; line-height: 18px; font-weight: bold;">{{item.system.baseSkillLevel}}</label>
+                </td>
+                {{else}}
+                <td style="display: flex">
+                    <label style="flex: 1; text-align: right; line-height: 18px; padding-right: 0.5em; text-decoration: underline">Dodge: </label>
+                    <label id="baseSkillLevel" style="flex: 1; text-align: left; line-height: 18px; font-weight: bold;">{{item.system.baseSkillLevel}}</label>
+                </td>
+                {{/unless}}
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Base Penalty</label>
+                </td>
+                <td>
+                    <input type="text" name="system.minLevel" value="{{item.system.minLevel}}" data-dtype="Number"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Max Bonus</label>
+                </td>
+                <td>
+                    <input type="text" name="system.maxLevel" value="{{item.system.maxLevel}}" data-dtype="Number"/>
+                </td>
+            </tr>
+            {{/if}}
+
+            <tr>
+                <td>
+                    <label class="resource-label">Modifier</label>
+                </td>
+                <td>
+                    <input type="text" name="system.mod" value="{{item.system.mod}}" data-dtype="Number"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Level</label>
+                </td>
+                <td>
+                    <label style="text-align: center; line-height: 18px; font-weight: bold; display: block;">{{item.system.level}}</label>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Points</label>
+                </td>
+                <td>
+                    <input type="text" name="system.points" value="{{item.system.points}}" data-dtype="Number"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Race / Meta Trait / Etc:</label>
+                </td>
+                <td>
+                    <input type="text" name="system.subCategory" value="{{item.system.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Notes</label>
+                </td>
+                <td>
+                    <input type="text" name="system.shortNotes" value="{{item.system.shortNotes}}"/>
+                </td>
+            </tr>
+        </table>
+    </div>
+    {{else if (eq item.type "Spell")}}
+
+    {{else if (eq item.type "Equipment")}}
+
+    {{/if}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav id="tabselect" class="sheet-tabs tabs" data-group="primary">
@@ -108,9 +283,11 @@
         <div class="header">
             <a class="item" data-tab="affliction">Affliction</a>
         </div>
+        {{#unless (eq item.type "Rollable")}}{{!-- Skills don't get to have armour --}}
         <div class="header">
             <a class="item" data-tab="armour">Armour</a>
         </div>
+        {{/unless}}
     </nav>
 
     {{!-- Sheet Body --}}
@@ -183,12 +360,13 @@
                                     tbb: Tight Beam Burning<br>
                                     dam: Untyped<br>
                                     <span style="text-decoration: underline">Valid modifiers are:</span><br>
-                                    ex: Explosive<br>
+                                    ex: Explosive (Damage drops off by range x3)<br>
+                                    ex#: Explosive (Damage drops off by range x#)<br>
                                     dbk: Double Knockback<br>
                                     dbt: Double Blunt Trauma<br>
                                     nw: No Wounding<br>
                                     la: Large Area Injury<br>
-                                    area: Large Area Injury<br>
+                                    area#: Area Attack, # is radius in yards<br>
                                 </div>
                             </span>
                         </span>
@@ -277,28 +455,31 @@
                                 <input type="text" name="system.ranged.{{id}}.damageType" value="{{ranged.damageType}}" title="{{ranged.damageType}}" style="text-align:left;" />
                                 <span class="tooltiptext" style="margin-left: -100px">
                                     <div>
-                                        <span style="text-decoration: underline">Valid entries are:</span><br>
-                                        burn: Burning<br>
-                                        cor: Corrosion<br>
-                                        cr: Crushing<br>
-                                        cut: Cutting<br>
-                                        fat: Fatigue<br>
-                                        imp: Impaling<br>
-                                        pi-: Small Piercing<br>
-                                        pi: Piercing<br>
-                                        pi+: Large Piercing<br>
-                                        pi++: Huge Piercing<br>
-                                        tox: Toxic<br>
-                                        tbb: Tight Beam Burning<br>
-                                        dam: Untyped<br>
-                                        <span style="text-decoration: underline">Valid modifiers are:</span><br>
-                                        ex: Explosive<br>
-                                        dbk: Double Knockback<br>
-                                        dbt: Double Blunt Trauma<br>
-                                        nw: No Wounding<br>
-                                        la: Large Area Injury<br>
-                                        area: Large Area Injury<br>
-                                    </div>
+                                    <span style="text-decoration: underline">Valid entries are:</span><br>
+                                    burn: Burning<br>
+                                    cor: Corrosion<br>
+                                    cr: Crushing<br>
+                                    cut: Cutting<br>
+                                    fat: Fatigue<br>
+                                    imp: Impaling<br>
+                                    pi-: Small Piercing<br>
+                                    pi: Piercing<br>
+                                    pi+: Large Piercing<br>
+                                    pi++: Huge Piercing<br>
+                                    tox: Toxic<br>
+                                    tbb: Tight Beam Burning<br>
+                                    dam: Untyped<br>
+                                    <span style="text-decoration: underline">Valid modifiers are:</span><br>
+                                    ex: Explosive (Damage drops off by range x3)<br>
+                                    ex3: Explosive (Damage drops off by range x3)<br>
+                                    ex2: Explosive (Damage drops off by range x2)<br>
+                                    ex1: Explosive (Damage drops off by range x1)<br>
+                                    dbk: Double Knockback<br>
+                                    dbt: Double Blunt Trauma<br>
+                                    nw: No Wounding<br>
+                                    la: Large Area Injury<br>
+                                    area#: Area Attack, # is radius in yards<br>
+                                </div>
                                 </span>
                             </span>
                         </td>
@@ -414,12 +595,15 @@
                                         tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
-                                        ex: Explosive<br>
+                                        ex: Explosive (Damage drops off by range x3)<br>
+                                        ex3: Explosive (Damage drops off by range x3)<br>
+                                        ex2: Explosive (Damage drops off by range x2)<br>
+                                        ex1: Explosive (Damage drops off by range x1)<br>
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
                                         la: Large Area Injury<br>
-                                        area: Large Area Injury<br>
+                                        area#: Area Attack, # is radius in yards<br>
                                     </div>
                                 </span>
                             </span>
@@ -481,6 +665,7 @@
         </div>
 
         {{!-- Armour Tab --}}
+        {{#unless (eq item.type "Rollable")}}{{!-- Skills don't get to have armour --}}
         <div class="tab stats" data-tab="armour" data-group="primary">
             <div class="tab">
                 <span>
@@ -664,5 +849,6 @@
                 </table>
             </div>
         </div>
+        {{/unless}}
     </section>
 </form>
